PortableModel(List) refactored, transparency refactored, findNodeByName() in Platform, reactivate delayed bundle, GLTFs more according spec, normal building refactored(SmoothingMap->VertexMap)